[tool.poetry]
name = "docsweeper"
version = "1.0.0"
description = "A linter for your Python code base that finds potentially outdated docstrings using version control."
authors = ["Andreas Thüring <a.thuering@gmail.com>"]
readme = "README.md"
homepage = "https://docsweeper.readthedocs.io/"
repository =  "https://github.com/thueringa/docsweeper"
documentation = "https://docsweeper.readthedocs.io/"
classifiers = [
  "Environment :: Console",
  "Environment :: Plugins",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8 ",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Version Control :: Mercurial",
  "Topic :: Utilities",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable"
]
packages = [
  {include = "docsweeper", from="src"},
  {include = "_docsweeper", from="src"},
  {include = "flake8_plugin", from = "src" },
]
license = "MIT"

[tool.poetry.scripts]
docsweeper = "_docsweeper.command_line:parse_args"

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
DOC100 = "flake8_plugin.Plugin:Plugin"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = { version = "4.2.0", python = "<3.8"}
click="^8.1.0"

[tool.poetry.dev-dependencies]
tox = "3.25.0"

# testing
Faker = "13.3.4"
pytest = "7.1.1"
pytest-cases = "3.6.11"

# docs
sphinx = [
  {version = "4.5.0", python = "3.10"},
  {version = "4.3.2", python = "<3.10"}
]
myst-parser = "0.17.2"
furo = "2022.04.07"

# linters
bandit = "1.7.4"
black = "22.3.0"
blackdoc = "0.3.4"
coverage = "6.3.2"
darglint = "1.8.1"
flake8="4.0.1"
flake8-bugbear = "22.3.23"
flake8-comprehensions = "3.8.0"
flake8-walrus= { version = "1.1.0", python = "^3.8" }
flake8-docstrings="1.6.0"
flake8-pytest="1.3"
flake8-pytest-style="1.6.0"
flake8-alfred="1.1.1"
flake8-future-annotations="0.0.4"
isort = "5.10.1"
mypy = "0.942"
vulture = "2.3"
pre-commit = "2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
