[tool.poetry]
name = "docsweeper"
version = "1.2.6-dev"
description = "A linter for your Python code base that finds potentially outdated docstrings using version control."
authors = ["Andreas Thüring <a.thuering@gmail.com>"]
readme = "README.rst"
homepage = "https://docsweeper.readthedocs.io/"
repository =  "https://github.com/thueringa/docsweeper"
documentation = "https://docsweeper.readthedocs.io/"
classifiers = [
  "Environment :: Console",
  "Environment :: Plugins",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8 ",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Version Control :: Mercurial",
  "Topic :: Utilities",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable"
]
packages = [
  {include = "docsweeper", from="src"},
  {include = "_docsweeper", from="src"},
  {include = "flake8_plugin", from = "src" },
]
license = "MIT"

[tool.poetry.scripts]
docsweeper = "_docsweeper.command_line:parse_args"

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
DOC100 = "flake8_plugin.Plugin:Plugin"

[tool.poetry.dependencies]
python = "^3.7,<3.11"
click="^8.1.0"

[tool.poetry.dev-dependencies]
tox = "3.25.0"

# testing
Faker = "13.13.0"
pytest = "7.1.2"
pytest-cases = "3.6.13"

# docs
sphinx = [
  {version = "5.0.1", python = "3.10"},
  {version = "4.3.2", python = "<3.10"}
]
furo = "2022.06.04.1"

# linters
bandit = "1.7.4"
black = "22.3.0"
blackdoc = "0.3.4"
coverage = "6.4.1"
darglint = "1.8.1"
flake8="4.0.1"
flake8-bugbear = "22.4.25"
flake8-comprehensions = "3.10.0"
flake8-walrus= { version = "1.1.0", python = "^3.8" }
flake8-docstrings="1.6.0"
flake8-pytest="1.3"
flake8-pytest-style="1.6.0"
flake8-future-annotations="0.0.5"
isort = "5.10.1"
mypy = "0.961"
vulture = "2.4"
pre-commit = "2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
